written task No7 + updated task No6